--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 	<script src="player.js"></script>  
 	<script src="main.js"></script>
 	<script src="enemy.js"></script>
+	<script src="vector2.js></script>
   </body>
 </html>
