--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     	
 	<script src="keyboard.js"></script>
 	<script src="player.js"></script>  
-	<script src="main.js"></script>
 	<script src="enemy.js"></script>
-	<script src="vector2.js></script>
+	<script src="vector2.js"></script>
+	<script src="main.js"></script>
   </body>
 </html>
