--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <canvas id="gameCanvas" width="640" height="480">
+    <canvas id="gameCanvas" width="800" height="800">
           This text is displayed if your browser does not support HTML5.
     </canvas>
     	
@@ -8,6 +8,7 @@
 	<script src="player.js"></script>  
 	<script src="enemy.js"></script>
 	<script src="vector2.js"></script>
+	<script src="map.js"></script>
 	<script src="main.js"></script>
   </body>
 </html>
