--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
   <body>
-    <canvas id="gameCanvas" width="1960" height="990">
+    <canvas id="gameCanvas" width="1300" height="990">
           This text is displayed if your browser does not support HTML5.
     </canvas>
     	
+	<script src="howler.js"></script>
 	<script src="sprite.js"></script>
 	<script src="keyboard.js"></script>
 	<script src="player.js"></script>  
